[gd_scene load_steps=2 format=2]

[ext_resource path="res://Criacaodeconta.gd" type="Script" id=1]

[node name="Criacaodeconta" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -82.5
margin_right = 286.0
margin_bottom = 82.5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 572.0
margin_bottom = 165.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 572.0
margin_bottom = 14.0
text = "Criar Conta"

[node name="UsernameField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 572.0
margin_bottom = 42.0
placeholder_text = "Usu√°rio"

[node name="PasswordField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 572.0
margin_bottom = 70.0
secret = true
placeholder_text = "Senha"

[node name="ConfirmField" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 572.0
margin_bottom = 98.0
secret = true
placeholder_text = "Confirmar Senha"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 572.0
margin_bottom = 122.0
text = "Criar Conta"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 572.0
margin_bottom = 146.0
text = "Voltar"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
modulate = Color( 0.941176, 0.0509804, 0.0509804, 1 )
margin_top = 150.0
margin_right = 572.0
margin_bottom = 164.0
